# terrain-navigation

./: .gitignore  LICENSE  Makefile  README.md  dependencies.rosinstall  terrain-navigation.repos
adaptive_viewutility/: CMakeLists.txt  package.xml
adaptive_viewutility/launch/: config.rviz  config_compare.rviz  config_loader.rviz  config_normals.rviz  config_planner.rviz  config_random.rviz  config_utility.rviz  config_visibility.rviz  run_compare_mesh.launch  run_evaluation.launch  run_meshtrimmer.launch  run_planner_benchmark.launch  run_random.launch  run_survey_benchmark.launch  test_gridmap_loader.launch  test_mesh.launch  test_normals.launch  test_utility_map.launch  test_viewutility.launch  test_visibility.launch  visualize.yaml
adaptive_viewutility/src/: adaptive_viewutility.cpp  compare_mesh_node.cpp  data_logger.cpp  dubins_planner.cpp  evaluate_progress_node.cpp  exploration_map.cpp  geometricprior_map.cpp  performance_tracker.cpp  profiler.cpp  run_meshtrimmer_node.cpp  sphericalcoverage_map.cpp  test_grid_node.cpp  test_gridmap_loader.cpp  test_mesh_node.cpp  test_normals_node.cpp  test_planner_node.cpp  test_random_node.cpp  test_utility_map_node.cpp  test_viewutility_node.cpp  test_visibility_node.cpp  viewplanner.cpp  viewpoint.cpp  viewutility_map.cpp
airsim_client/: CMakeLists.txt  package.xml
airsim_client/launch/: config.rviz  get_airsim_position.launch  test_airsim.launch  test_coverage_airsim.launch  test_gridplanner.launch  test_planner_airsim.launch  test_random_airsim.launch
airsim_client/src/: airsim_client.cpp  get_airsim_position_node.cpp  test_airsim_node.cpp  test_gridplanner_node.cpp  test_planner_airsim_node.cpp  test_random_airsim_node.cpp
mav_planning_rviz/: CMakeLists.txt  package.xml  plugins_description.xml
mav_planning_rviz/Tools/: setup.bash
mav_planning_rviz/launch/: run_rviz.launch
mav_planning_rviz/rviz/: config.rviz
mav_planning_rviz/src/: edit_button.cpp  goal_marker.cpp  planning_interactive_markers.cpp  planning_panel.cpp  pose_widget.cpp  standalone_test.cpp
planner_msgs/: CMakeLists.txt  package.xml
planner_msgs/msg/: MctsInfo.msg  NavigationStatus.msg  Path.msg  PathSegment.msg  TerrainInfo.msg
planner_msgs/srv/: SetPlannerState.srv  SetString.srv  SetVector3.srv
terrain_abort_planner/: CMakeLists.txt  package.xml
terrain_abort_planner/launch/: rallypoints.rviz  run_dynamic_rallypoints.launch
terrain_abort_planner/resources/: duebendorf.tif  duebendorf_color.tif
terrain_abort_planner/src/: mission_io.cpp  run_dynamic_rallypoints.cpp
terrain_abort_planner/test/: test_mission_io.cpp
terrain_navigation/: CMakeLists.txt  package.xml
terrain_navigation/src/: data_logger.cpp  profiler.cpp  terrain_map.cpp
terrain_navigation/test/: test_terrain_map.cpp  test_trajectory.cpp
terrain_navigation_ros/: CMakeLists.txt  package.xml
terrain_navigation_ros/config/: HeightRateTuning.cfg  ap_config.yaml  ap_pluginlists.yaml  davosdorf_mission.plan  davosdorf_mission.txt
terrain_navigation_ros/launch/: ardupilot.launch.py  config_visualize.rviz  mavros.launch.py  run_coverage_benchmark.launch  run_planner.launch  run_rosbag.launch  rviz.launch.py  terrain_planner.launch.py  test_terrain_planner.launch  test_terrain_planner.launch.py  visualize_path.launch
terrain_navigation_ros/resources/: davosdorf.tif  davosdorf.world
terrain_navigation_ros/scripts/: global_postion_relay.py
terrain_navigation_ros/src/: geo_conversions.cpp  terrain_planner.cpp  terrain_planner_node.cpp  test_coverage_node.cpp  visualization.cpp  visualize_path_node.cpp
terrain_planner/: CMakeLists.txt  package.xml
terrain_planner/launch/: config.rviz  config_dfs.rviz  config_dubins.rviz  config_dubins_to_circle.rviz  config_ics.rviz  config_ifs.rviz  config_mcts.rviz  config_mcts_mapping.rviz  config_ompl.rviz  config_ompl_segments.rviz  config_surface.rviz  run_planner.launch  run_rosbag.launch  test_distance_surface.launch  test_dubins_classification.launch  test_dubins_planner.launch  test_ics.launch  test_mcts.launch  test_mcts_mapping.launch  test_ompl.launch  test_ompl_dubins.launch  test_ompl_dubins_to_circle.launch  test_ompl_replanning.launch  test_ompl_rrt.launch  test_ompl_rrt_circle.launch  test_terrain_planner.launch
terrain_planner/src/: DubinsAirplane.cpp  DubinsAirplane2.cpp  DubinsPath.cpp  HybridAirplane.cpp  TrochoidAirplane.cpp  common.cpp  dubins_planner.cpp  maneuver_library.cpp  mcts_planner.cpp  mm_prm.cpp  primitive_planner.cpp  profiler.cpp  terrain_map.cpp  terrain_mm_prm.cpp  terrain_ompl.cpp  terrain_ompl_rrt.cpp  terrain_planner.cpp  terrain_planner_node.cpp  test_distance_surface.cpp  test_dubins_classification.cpp  test_dubins_planner.cpp  test_ics.cpp  test_mcts.cpp  test_mcts_mapping.cpp  test_ompl_dubins.cpp  test_ompl_dubins_to_circle.cpp  test_rrt_circle_goal.cpp  test_rrt_node.cpp  test_rrt_replanning_node.cpp  visualization.cpp
terrain_planner/test/: test_maneuver_library.cpp  test_mcts_planner.cpp  test_terrain_map.cpp
terrain_planner_benchmark/: CMakeLists.txt  README.md  package.xml
terrain_planner_benchmark/Tools/: analyze_flighttest.py  benchmark_circlegoal.yaml  benchmark_dubins_classification.py  benchmark_goalcoverage.yaml  colormap.txt  draw_colormap.py  draw_legend.py  generate_colormap.py  ompl_benchmark_statistics.py  replay_flightest.py  run_circlegoal_benchmark.sh  run_dubins_classification_benchmark.sh  run_ics_benchmark.sh  visualize_circlegoal_benchmark.py  visualize_cross_section.py  visualize_dem.py  visualize_goal_coverage.py  visualize_ompl_benchmarks.py  visualize_replanning.py
terrain_planner_benchmark/launch/: benchmark.launch  benchmark_replanning.launch  goaltype_benchmark.launch  ompl_benchmark.launch  plan_transition.launch  replay.rviz  run_mm_prm.launch  run_replay.launch  run_surface_visualization.launch  test_dubins_classification.launch  test_ics.launch  test_ompl_rrt_abort.launch  test_ompl_rrt_circle.launch  test_ompl_rrt_hybrid.launch  visualize.rviz  visualize_overview.launch
terrain_planner_benchmark/resources/: mission.plan
(+145 files in other folders)
