<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planner_msgs</name>
  <version>0.0.1</version>
  <description>
    controller_msgs includes the definition for custom messages for the <a href="https://github.com/Jaeyoung-Lim/mavros_controllers.git">mavros_controllers</a> package.
  </description>

  <maintainer email="jalim@student.ethz.ch">Jaeyoung Lim</maintainer>
  <author email="jalim@student.ethz.ch">Jaeyoung Lim</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
