<package>
  <name>terrain_navigation</name>
  <version>0.0.1</version>
  <description>Steep terrain navigation package</description>

  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>

  <author>Jaeyoung Lim</author>

  <license>BSD-3</license>

  <url type="website">https://github.com/Jaeyoung-Lim/steep-terrain-navigation</url>
  <url type="bugtracker">https://github.com/Jaeyoung-Lim/steep-terrain-navigation/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>terrain_planner</build_depend>
  <build_depend>mav_planning_rviz</build_depend>

  <export>
  </export>
</package>
