<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>terrain_navigation</name>
  <version>0.0.1</version>
  <description>Steep terrain navigation package</description>
  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>
  <author>Jaeyoung Lim</author>
  <license>BSD-3</license>

  <url type="website">https://github.com/Jaeyoung-Lim/steep-terrain-navigation</url>
  <url type="bugtracker">https://github.com/Jaeyoung-Lim/steep-terrain-navigation/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_geo</build_depend>
  <build_depend>libgdal-dev</build_depend>

  <!-- <build_depend>rclcpp</build_depend> -->
  <build_depend>class_loader</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libgdal-dev</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rosbag2_storage</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_depend>action_msgs</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
