<package>
  <name>terrain_navigation_ros</name>
  <version>0.0.1</version>
  <description>Steep terrain navigation package</description>

  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>

  <author>Jaeyoung Lim</author>

  <license>BSD-3</license>

  <url type="website">https://github.com/Jaeyoung-Lim/steep-terrain-navigation</url>
  <url type="bugtracker">https://github.com/Jaeyoung-Lim/steep-terrain-navigation/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_extras</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_pcl</build_depend>
  <build_depend>grid_map_geo</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>planner_msgs</build_depend>
  <build_depend>terrain_navigation</build_depend>
  <build_depend>terrain_planner</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>ompl</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>grid_map_visualization</run_depend>
  <run_depend>grid_map_rviz_plugin</run_depend>
  <run_depend>planner_msgs</run_depend>
  <run_depend>terrain_navigation</run_depend>
  <run_depend>terrain_planner</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>mav_planning_rviz</run_depend>
  <run_depend>ompl</run_depend>
  <export>
  </export>
</package>
