<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>terrain_navigation_ros</name>
  <version>0.0.1</version>
  <description>Steep terrain navigation package</description>
  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>
  <author>Jaeyoung Lim</author>
  <license>BSD-3</license>
  <url type="website">https://github.com/Jaeyoung-Lim/steep-terrain-navigation</url>
  <url type="bugtracker">https://github.com/Jaeyoung-Lim/steep-terrain-navigation/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geographic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>planner_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_depend>eigen</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <build_depend>grid_map_geo</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_pcl</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_extras</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>planner_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>terrain_navigation</build_depend>
  <build_depend>terrain_planner</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>yaml_cpp_vendor</build_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>grid_map_visualization</exec_depend>
  <exec_depend>grid_map_rviz_plugin</exec_depend>
  <exec_depend>mav_planning_rviz</exec_depend>
  <exec_depend>planner_msgs</exec_depend>
  <exec_depend>ompl</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>terrain_navigation</exec_depend>
  <exec_depend>terrain_planner</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
